# read_suggestions

./: .gitignore  README.md  accept.ts  add-cover.ts  anonymize.ts  bovw.py  bovw_sift.py  catboost.ipynb  catboost_no_cover.ipynb  cnn.py  cnn_resnet18.py  eff_train.py  label-images.ts  label.ts  load-book.ts  package-lock.json  package.json  pyproject.toml  resize.ts  scrap.ts  shared.ts  static.ts  tqdm.d.ts  tsconfig.json  utils.ts  validate.ts  vgg_run.py  vgg_train.py
outdated/: add-cover.ts  bovw.py  cnn.py  cnn_resnet18.py
static/: index.html  script.js  style.css
