[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["Eslafmailer <eslafmailer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
setuptools = "^68.0.0"
numpy = "^1.25.0"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
scipy = "^1.11.1"
opencv-python = "^4.8.0.74"
pillow = "^10.0.0"
opencv-contrib-python = "^4.8.0.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
